# AnimaMac

./: Cargo.toml  README.md
assets/: appid
src/: character_lib.rs  lib.rs  logging.rs  main.rs  settings.rs  steamlib.rs  steamlib_original.rs
