[package]
name = "animatux"
version = "0.1.0"
edition = "2024"

[features]
default = ["steamcmd", "lite"]
steamcmd = [] #Feature is experimental on Windows, add steamcmd to path for definite support
lite = ["dep:rfd"]

[dependencies]
rfd = { version = "0.17.2",  optional = true }
eframe = { path = "./egui/crates/eframe" }
egui_extras = { path = "./egui/crates/egui_extras", features = ["default", "image", "webp", "gif", "file"] }
image = { version = "0.25", features = ["png", "gif"] }


#eframe = {version = "0.33.3", features = ["default"]}
#egui = { path = "./egui/crates/egui" }
#egui_extras = {version = "0.33.3", features = ["default", "image", "webp", "gif", "file"] }
