[package]
name = "animamac"
version = "0.1.0"
edition = "2024"

[package.metadata.macos]
ls_ui_element = true

[features]
default = ["steamcmd", "lite"]
steamcmd = [] #Feature is experimental on Windows, add steamcmd to path for definite support
lite = ["dep:rfd"]

[dependencies]
rfd = { version = "0.17.2",  optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
egui_extras = { git = "https://github.com/sethblocks/egui.git", branch = "release/0.33.3", package = "egui_extras", features = ["default", "image", "webp", "gif", "file"] }
eframe = { git = "https://github.com/sethblocks/egui.git", branch = "release/0.33.3" }
image = { version = "0.25", features = ["png", "gif", "webp"] }
png = "0.18"
webp-animation = "0.9"
tempfile = "3"
